--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
 }
 
 .menu {
+    z-index: 6;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -26,7 +27,40 @@ body {
 }
 
 .popuptext {
+    z-index: 5;
+    display: block;
+    margin-top: -16px;
+    color: white;
     list-style: none;
     width: 120px;
     height: 60px;
+    background-color: rgb(51, 51, 50, 0.7);
+}
+
+.popuptext:hover {
+    animation-name: moveit;
+    animation-duration: 2s;
+    position: relative;
+    animation-fill-mode: forwards;
+    margin-top: -16px;
+    color: white;
+    list-style: none;
+    width: 120px;
+    height: 60px;
+    background-color: rgb(51, 51, 50, 0.7);
+}
+
+@keyframes moveit {
+    0% {
+        left: 0px;
+    }
+    100% {
+        left: 50px;
+    }
+}
+
+p {
+    position: relative;
+    top: 10px;
+    left: 10px;
 }
