--- a/style.css
+++ b/style.css
@@ -3,8 +3,22 @@ body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-.menu {
-    z-index: 6;
+#bloc {
+    position: absolute;
+    top: 15px;
+}
+
+ul {
+    list-style: none;
+    display: flex;
+}
+
+li {
+    margin-top: -16px;
+}
+
+.icon {
+    z-index: 1;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -16,37 +30,31 @@ body {
     height: 60px;
 }
 
-.menu:hover {
+.icon:hover {
     transition: 2s;
     background-color: white;
+    z-index: -1;
 }
 
 .text {
-    position: relative;
-    bottom: 480px;
-}
-
-.popuptext {
-    z-index: 5;
-    display: block;
-    margin-top: -16px;
+    position: absolute;
+    font-size: 12px;
     color: white;
     list-style: none;
     width: 120px;
     height: 60px;
-    background-color: rgb(51, 51, 50, 0.7);
+    background-color: rgb(51, 51, 50, 0.0);
 }
 
-.popuptext:hover {
+ul:hover .text {
+    z-index: 2;
     animation-name: moveit;
-    animation-duration: 2s;
-    position: relative;
+    animation-duration: 0.5s;
+    position: absolute;
     animation-fill-mode: forwards;
-    margin-top: -16px;
     color: white;
     list-style: none;
-    width: 120px;
-    height: 60px;
+    margin-left: 40px;
     background-color: rgb(51, 51, 50, 0.7);
 }
 
@@ -55,12 +63,12 @@ body {
         left: 0px;
     }
     100% {
-        left: 50px;
+        left: 60px;
     }
 }
 
-p {
-    position: relative;
+span {
+    position: absolute;
     top: 10px;
     left: 10px;
 }
